--- a/index.html
+++ b/index.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarea</title>
+    <link rel="stylesheet" href="borrador.css">
 </head>
 <body>
-    <h1 style="color: blue;">Hola</h1>
-    <img src="imagenes/marselo.jfif" alt="">
-    <h2 style="color: darkorange;">agachate y conocelo</h2>
-    <h3>mira un patito</h3>
-    <img src="imagenes/patito.gif" alt="">
+    <header> 
+        <nav>
+            <ul style="list-style-type: none;">
+                <li><a href="https://www.balenciaga.com/es-es">Ropa cara</a></li>
+                <li><a href="https://www.google.com/webhp?hl=es-419&ictx=2&sa=X&ved=0ahUKEwjBwa-gyuCHAxXrqJUCHUZZABYQPQgJ">Buscador</a></li>
+            </ul>
+        </nav>
+    </header>
+    <form action="#" method="get">
+        <fieldset>
+            <legend>Informacion Personal</legend>
+            Nombre<br>
+        <input type="text" name="Nombre"><br>
+            Edad<br>
+        <input type="number" name="Edad"><br>
+        Hincha de<br>
+        <input type="radio" name="Hincha de" value="Boca">Boca <br>
+        <input type="radio" name="Hincha de" value="Bokita">Bokita <br>
+        <input type="radio" name="Hincha de" value="Un equipo chico">Un equipo chico<br><br>
+        <input type="submit" value="Enviar">
+    </fieldset>
+    </form>
 </body>
 </html>
