--- a/index.html
+++ b/index.html
@@ -3,30 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tarea</title>
+    <title>Borrador</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body>
-    <header> 
-        <nav>
-            <ul style="list-style-type: none;">
-                <li><a href="https://www.balenciaga.com/es-es">Ropa cara</a></li>
-                <li><a href="https://www.google.com/webhp?hl=es-419&ictx=2&sa=X&ved=0ahUKEwjBwa-gyuCHAxXrqJUCHUZZABYQPQgJ">Buscador</a></li>
+<header>
+    <nav>
+        <ul>
+            <li style="list-style: none;"><a href="menu.html">MENU CAFÉ</li>
+            <li><a href=""></a></li>
             </ul>
         </nav>
     </header>
-    <form action="#" method="get">
-        <fieldset>
-            <legend>Informacion Personal</legend>
-            Nombre<br>
-        <input type="text" name="Nombre"><br>
-            Edad<br>
-        <input type="number" name="Edad"><br>
-        Hincha de<br>
-        <input type="radio" name="Hincha de" value="Boca">Boca <br>
-        <input type="radio" name="Hincha de" value="Bokita">Bokita <br>
-        <input type="radio" name="Hincha de" value="Un equipo chico">Un equipo chico<br><br>
-        <input type="submit" value="Enviar">
-    </fieldset>
-    </form>
+<body>
+    <main>
+        <h1>Cafeteria by kokó</h1>
+        <section class="beneficios">
+         <article class="titulo-beneficio">Promociones</article>
+            <article>
+                <h3 class="Titulo-promo">Promo 1</h3>
+                <p>1 Cafe + 2 Medialunas $3500</p>
+            </article>
+           <article>
+               <h3 class="Titulo-promo">Promo 2</h3>
+               <p>1 Submarino + 4 Tostadas $4200</p>
+            </article>
+            <article>
+
+                <h3 class="Titulo-promo">Promo 3</h3>
+                <p>2 Capuccinos + 2 Submarinos (Incluyen tostadas) $9300</p>
+            </article> 
+        </section>
+        <form action="#" method="get">
+            <fieldset>
+                <legend>Informacion Personal</legend>
+                Nombre<br>
+            <input type="text" name="Nombre"><br>
+                Edad<br>
+            <input type="number" name="Edad"><br>
+            Hincha de<br>
+            <input type="radio" name="Hincha de" value="Boca">Boca <br>
+            <input type="radio" name="Hincha de" value="Bokita">Bokita <br>
+            <input type="radio" name="Hincha de" value="Un equipo chico">Un equipo chico<br><br>
+            <input type="submit" value="Enviar">
+        </fieldset>
+        </form>
+    </main>
+    <br><br><br><br>
+    <footer class="footer">
+<p>Terminos y condiciones</p>
+<p>Legales</p>
+<p>Trabaja con nosostros</p>
+    </footer>
 </body>
 </html>
