--- a/index.html
+++ b/index.html
@@ -4,51 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarea</title>
+    <link rel="icon" href="./imagenes/icono-cafe.png">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<header>
-    <nav>
-        <ul>
-            <li style="list-style: none;"><a href="menu.html">MENU CAFÉ</li>
-            <li><a href=""></a></li>
-            </ul>
-        </nav>
-    </header>
-<body>
+
+<!-- Body -->
+<body class="body">
+    <header>
+        <nav>
+            <ul class="menu-cafe">
+                    <li class="lista-menu"><a href="menu.html" class="letras">MENU CAFÉ</li>
+                        <li class="lista-menu"><a href="#" class="letras">CONTACTO</a></li>
+                    </ul>
+                </nav>
+        </header>
+
     <main>
-        <h1>Cafeteria by kokó</h1>
+
+        <!-- Beneficios -->
+        <h1 class="titulo-cafeteria">Cafeteria by kokó</h1>
         <section class="beneficios">
          <article class="titulo-beneficio">Promociones</article>
-            <article>
+            <article class="articulo">
                 <h3 class="Titulo-promo">Promo 1</h3>
                 <p>1 Cafe + 2 Medialunas $3500</p>
             </article>
-           <article>
+           <article class="articulo">
                <h3 class="Titulo-promo">Promo 2</h3>
                <p>1 Submarino + 4 Tostadas $4200</p>
             </article>
-            <article>
+            <article class="articulo">
 
                 <h3 class="Titulo-promo">Promo 3</h3>
                 <p>2 Capuccinos + 2 Submarinos (Incluyen tostadas) $9300</p>
             </article> 
         </section>
+
+        <!--  Formulario -->
         <form action="#" method="get">
-            <fieldset>
-                <legend>Informacion Personal</legend>
-                Nombre<br>
-            <input type="text" name="Nombre"><br>
-                Edad<br>
-            <input type="number" name="Edad"><br>
-            Hincha de<br>
-            <input type="radio" name="Hincha de" value="Boca">Boca <br>
-            <input type="radio" name="Hincha de" value="Bokita">Bokita <br>
-            <input type="radio" name="Hincha de" value="Un equipo chico">Un equipo chico<br><br>
-            <input type="submit" value="Enviar">
+            <fieldset class="fieldset">
+                    <legend class="legend">Informacion Personal</legend>
+                    Nombre<br>
+                    <input type="text" name="Nombre" class="elemento-form"><br>
+                    Edad<br>
+                    <input type="number" name="Edad" class="elemento-form"><br>
+                    Hincha de<br>
+                    <input type="radio" name="Hincha de" value="Boca" class="opcion-form">Boca <br>
+                    <input type="radio" name="Hincha de" value="Bokita" class="opcion-form">Bokita <br>
+                    <input type="radio" name="Hincha de" value="Un equipo chico" class="opcion-form" >Un equipo chico<br><br>
+                    <input type="submit" value="Enviar" >
         </fieldset>
         </form>
     </main>
-    <br><br><br><br>
+    <br><br><br><br><br>
+
+    <!-- Footer -->
     <footer class="footer">
 <p>Terminos y condiciones</p>
 <p>Legales</p>
