--- a/menu.html
+++ b/menu.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
+    <link rel="icon" href="./imagenes/icono-cafe.png">
     <link rel="stylesheet" href="./css/menu.css">
 </head>
 <body>
+
+    <!-- Header -->
     <header>
         <h1>Menu cafeteria by kokó</h1>
     </header>
+
+<!-- Main -->
     <main>
         <p class="info-promo">Sabados y Domingos Descuentos del 30% con CUENTA DNI</p>
          <section class="menu-cafe">
@@ -26,6 +31,8 @@
         
     </main>
     <br><br><br><br>
+
+<!-- Footer -->
 <footer class="footer">
     <p>Terminos y condiciones</p>
     <p>Legales</p>
