--- a/menu.html
+++ b/menu.html
@@ -7,18 +7,18 @@
     <link rel="icon" href="./imagenes/icono-cafe.png">
     <link rel="stylesheet" href="./css/menu.css">
 </head>
-<body>
+<body class="body">
 
     <!-- Header -->
     <header>
-        <h1>Menu cafeteria by kokó</h1>
+        <h1 class="titulo-menu">Menu cafeteria by kokó</h1>
     </header>
 
 <!-- Main -->
     <main>
         <p class="info-promo">Sabados y Domingos Descuentos del 30% con CUENTA DNI</p>
          <section class="menu-cafe">
-            <legend>CAFETERIA</legend>
+            <legend class="legend">CAFETERIA</legend>
                 <article>
                     <p class="cafe">Café expresso chico $1200</p>
                     <p class="cafe">Cortado chico $1200</p>
