--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <!-- Body -->
-<body class="body-page">
+<body class="body">
     <!--Inicio de header-->
     <header>
         <nav>
@@ -62,9 +62,57 @@
 
     <!-- Footer -->
     <footer class="footer">
-<p>Terminos y condiciones</p>
-<p>Legales</p>
-<p>Trabaja con nosostros</p>
-    </footer>
+
+   <article class="footer-header">
+       <h3>Jeremias Soto</h3>
+       <p>Seguinos en las redes sociales</p>
+    </article>     
+
+<section class="footer-iconos-grandes">
+    <article class="icono-grande">    
+        <a href="#">
+            <img src="./imagenes/github.png" alt="">
+            <p>github</p>
+        </a>
+    </article>
+
+    <article class="icono-grande">
+        <a href="#">
+            <img src="imagenes/correo-electronico.png" alt="">
+            <p>email</p>
+        </a>
+    </article>
+</section>
+
+    <section class="footer-iconos-chicos">        
+       
+        <article class="icono-chico">
+            <a href="#">
+                <img src="imagenes/facebook.png" alt="">
+            </a>
+        </article>
+
+        <article class="icono-chico">
+            <a href="#">
+                <img src="imagenes/twitter.png" alt="">
+            </a>
+        </article>
+        
+        <article class="icono-chico">
+            <a href="#">
+                <img src="imagenes/instagram.png" alt="">
+            </a>
+        </article>
+
+        <article class="icono-chico">
+            <a href="#">
+                <img src="imagenes/tik-tok.png" alt="">
+            </a>
+        </article>
+
+</section>
+
+</footer>
+<script src="javascript/index.js"></script>
 </body>
 </html>
