--- a/contacto.html
+++ b/contacto.html
@@ -71,11 +71,10 @@
 
  <!-- Footer -->
  <footer class="footer">
-    <section class="footer-header">
-        <p>Terminos y condiciones</p>
-        <p>Legales</p>
-        <p>Trabaja con nosostros</p>
-    </section>
+    <article class="footer-header">
+        <h3>Jeremias Soto</h3>
+        <p>Seguinos en las redes sociales</p>
+     </article>
 
 <section class="footer-iconos-grandes">
 <article class="icono-grande">    
