--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <!--Inicio de Main-->
     <main>
         
-        <article class="titulo-beneficio">Promociones</article><br>
+        <article class="titulo-beneficio">MERIENDA PARA DOS</article><br>
 
         
         <!-- Inicio de cards -->
