--- a/index.html
+++ b/index.html
@@ -59,22 +59,19 @@
          <article class="card">
                 <h3 class="titulo-card">Promo 1</h3>
                 <img src="imagenes/cafe-dos-medialunas.jpg" alt="">
-                <p class="contenido-card">1 Cafe + 2 Medialunas $3500</p>
-                <p>(Imagen ilustrativa)</p>
+                <p class="contenido-card">Infusion + Medialunas $3500</p>
             </article>
 
            <article class="card">
                <h3 class="titulo-card">Promo 2</h3>
                <img src="imagenes/submarino-y-tostados.jpg" alt="">
-               <p class="contenido-card">2 Submarinos + 4 Tostados $4200</p>
-               <p>(Imagen ilustrativa)</p>
+               <p class="contenido-card">Infusion + 2 Tostados $4200</p>
             </article>
 
             <article class="card">
                 <h3 class="titulo-card">Promo 3</h3>
-                <img src="imagenes/capuccino-y-submarino.jpg" alt="">
-                <p class="contenido-card">2 Capuccinos + 2 Submarinos (Incluyen tostados) $9300</p>
-                <p>(Imagen ilustrativa)</p>
+                <img src="imagenes/capuccino-y-submarino.jpg" alt="" class="capu-tostado">
+                <p class="contenido-card">Capuccino O Submarino + Tostados $9300</p>
             </article> 
             
         </section>
